on commence à arriver à un vrai truc
ajout quasi complet d'une vérif des infos entrées au moment de l'inscription

--- a/ProjetBanque/ProjetBanque.csproj
+++ b/ProjetBanque/ProjetBanque.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Banque.cs" />
+    <Compile Include="CompteCourant.cs" />
+    <Compile Include="LivretA.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="Compte.cs" />
     <Compile Include="FormAccueil.cs">
