--- a/ProjetBanque/ProjetBanque.csproj
+++ b/ProjetBanque/ProjetBanque.csproj
@@ -48,6 +48,12 @@
   <ItemGroup>
     <Compile Include="Banque.cs" />
     <Compile Include="CompteCourant.cs" />
+    <Compile Include="FormOperation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormOperation.Designer.cs">
+      <DependentUpon>FormOperation.cs</DependentUpon>
+    </Compile>
     <Compile Include="LivretA.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="Compte.cs" />
@@ -71,6 +77,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormConnexion.resx">
       <DependentUpon>FormConnexion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormOperation.resx">
+      <DependentUpon>FormOperation.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
