Début ajout gestion de clients avec compte admin
tout est dans le titre bande de pds

--- a/ProjetBanque/ProjetBanque.csproj
+++ b/ProjetBanque/ProjetBanque.csproj
@@ -48,6 +48,12 @@
   <ItemGroup>
     <Compile Include="Banque.cs" />
     <Compile Include="CompteCourant.cs" />
+    <Compile Include="Formgestion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formgestion.Designer.cs">
+      <DependentUpon>Formgestion.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormOperation.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -77,6 +83,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormConnexion.resx">
       <DependentUpon>FormConnexion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formgestion.resx">
+      <DependentUpon>Formgestion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormOperation.resx">
       <DependentUpon>FormOperation.cs</DependentUpon>
